API cleanup (#14)
Cleanup API and regenerate swagger models.
