# servers/dsub/jobs/models/__init__.py
@@ -3,9 +3,9 @@
 from __future__ import absolute_import
 # import models into model package
 from .failure_message import FailureMessage
-from .job_abort_response import JobAbortResponse
 from .job_metadata_response import JobMetadataResponse
-from .job_query_request import JobQueryRequest
-from .job_query_response import JobQueryResponse
-from .job_query_result import JobQueryResult
+from .job_status import JobStatus
+from .query_jobs_request import QueryJobsRequest
+from .query_jobs_response import QueryJobsResponse
+from .query_jobs_result import QueryJobsResult
 from .task_metadata import TaskMetadata
