# servers/dsub/jobs/models/query_jobs_response.py
@@ -1,27 +1,27 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-from jobs.models.job_query_result import JobQueryResult
+from jobs.models.query_jobs_result import QueryJobsResult
 from .base_model_ import Model
 from datetime import date, datetime
 from typing import List, Dict
 from ..util import deserialize_model
 
 
-class JobQueryResponse(Model):
+class QueryJobsResponse(Model):
     """
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
     def __init__(self, results=None):
         """
-        JobQueryResponse - a model defined in Swagger
+        QueryJobsResponse - a model defined in Swagger
 
-        :param results: The results of this JobQueryResponse.
-        :type results: List[JobQueryResult]
+        :param results: The results of this QueryJobsResponse.
+        :type results: List[QueryJobsResult]
         """
         self.swagger_types = {
-            'results': List[JobQueryResult]
+            'results': List[QueryJobsResult]
         }
 
         self.attribute_map = {
@@ -37,28 +37,28 @@ class JobQueryResponse(Model):
 
         :param dikt: A dict.
         :type: dict
-        :return: The JobQueryResponse of this JobQueryResponse.
-        :rtype: JobQueryResponse
+        :return: The QueryJobsResponse of this QueryJobsResponse.
+        :rtype: QueryJobsResponse
         """
         return deserialize_model(dikt, cls)
 
     @property
     def results(self):
         """
-        Gets the results of this JobQueryResponse.
+        Gets the results of this QueryJobsResponse.
 
-        :return: The results of this JobQueryResponse.
-        :rtype: List[JobQueryResult]
+        :return: The results of this QueryJobsResponse.
+        :rtype: List[QueryJobsResult]
         """
         return self._results
 
     @results.setter
     def results(self, results):
         """
-        Sets the results of this JobQueryResponse.
+        Sets the results of this QueryJobsResponse.
 
-        :param results: The results of this JobQueryResponse.
-        :type results: List[JobQueryResult]
+        :param results: The results of this QueryJobsResponse.
+        :type results: List[QueryJobsResult]
         """
         if results is None:
             raise ValueError("Invalid value for `results`, must not be `None`")
