# servers/dsub/jobs/swagger/swagger.yaml
@@ -12,6 +12,8 @@ produces:
 paths:
   /jobs/{id}/abort:
     post:
+      tags:
+      - "Jobs"
       summary: "Abort a job by ID"
       operationId: "abort_job"
       parameters:
@@ -22,40 +24,42 @@ paths:
         type: "string"
       responses:
         200:
-          description: "Successful Request"
-          schema:
-            $ref: "#/definitions/JobAbortResponse"
+          description: "Success"
         400:
-          description: "Malformed Job ID"
-        403:
-          description: "Job in terminal status"
+          description: "Bad request"
         404:
-          description: "Job ID Not Found"
+          description: "Job not found"
+        412:
+          description: "Job in terminal status"
         500:
-          description: "Internal Error"
+          description: "Internal server error"
       x-swagger-router-controller: "jobs.controllers.jobs_controller"
   /jobs/query:
     post:
-      summary: "Query jobs by start dates, end dates, names, ids, or statuses."
+      tags:
+      - "Jobs"
+      summary: "Query jobs by various filter criteria."
       operationId: "query_jobs"
       parameters:
       - in: "body"
         name: "parameters"
         required: true
         schema:
-          $ref: "#/definitions/JobQueryRequest"
+          $ref: "#/definitions/QueryJobsRequest"
       responses:
         200:
-          description: "Successful Request"
+          description: "Success"
           schema:
-            $ref: "#/definitions/JobQueryResponse"
+            $ref: "#/definitions/QueryJobsResponse"
         400:
-          description: "Malformed Request"
+          description: "Bad request"
         500:
-          description: "Internal Error"
+          description: "Internal server error"
       x-swagger-router-controller: "jobs.controllers.jobs_controller"
   /jobs/{id}:
     get:
+      tags:
+      - "Jobs"
       summary: "Query for job and task-level metadata for a specified job"
       operationId: "get_job"
       parameters:
@@ -66,28 +70,17 @@ paths:
         type: "string"
       responses:
         200:
-          description: "Successful Request"
+          description: "Success"
           schema:
             $ref: "#/definitions/JobMetadataResponse"
         400:
-          description: "Malformed Job ID"
+          description: "Bad request"
         404:
-          description: "Job ID Not Found"
+          description: "Job not found"
         500:
-          description: "Internal Error"
+          description: "Internal server error"
       x-swagger-router-controller: "jobs.controllers.jobs_controller"
 definitions:
-  JobAbortResponse:
-    required:
-    - "id"
-    - "status"
-    properties:
-      id:
-        type: "string"
-        description: "The identifier of the job"
-      status:
-        type: "string"
-        description: "The status of the job"
   JobMetadataResponse:
     required:
     - "id"
@@ -98,8 +91,7 @@ definitions:
         type: "string"
         description: "The identifier of the job"
       status:
-        type: "string"
-        description: "The status of the job"
+        $ref: "#/definitions/JobStatus"
       submission:
         type: "string"
         format: "date-time"
@@ -125,16 +117,24 @@ definitions:
         description: "Custom job labels with string values"
         properties: {}
       tasks:
-        $ref: "#/definitions/TaskMetadata"
+        type: "array"
+        items:
+          $ref: "#/definitions/TaskMetadata"
       failures:
         type: "array"
         items:
           $ref: "#/definitions/FailureMessage"
     description: "Job and task level metadata"
+  JobStatus:
+    type: "string"
+    enum:
+    - "Submitted"
+    - "Running"
+    - "Aborting"
+    - "Failed"
+    - "Succeeded"
+    - "Aborted"
   TaskMetadata:
-    required:
-    - "executionStatus"
-    - "inputs"
     properties:
       inputs:
         type: "object"
@@ -142,7 +142,7 @@ definitions:
         properties: {}
       executionStatus:
         type: "string"
-        description: "Status in Cromwell execution terms."
+        description: "Backend-specific task status."
       start:
         type: "string"
         format: "date-time"
@@ -172,7 +172,6 @@ definitions:
   FailureMessage:
     required:
     - "failure"
-    - "timestamp"
     properties:
       failure:
         type: "string"
@@ -182,7 +181,7 @@ definitions:
         format: "date-time"
         description: "The time at which this failure occurred"
     description: "Failure messages"
-  JobQueryRequest:
+  QueryJobsRequest:
     properties:
       start:
         type: "string"
@@ -201,14 +200,7 @@ definitions:
         description: "Returns only jobs with the specified status.  If specified multiple\
           \ times, returns jobs in any of the specified statuses.\n"
         items:
-          type: "string"
-          enum:
-          - "Submitted"
-          - "Running"
-          - "Aborting"
-          - "Failed"
-          - "Succeeded"
-          - "Aborted"
+          $ref: "#/definitions/JobStatus"
       name:
         type: "string"
         description: "Returns only jobs with the specified name.  If specified multiple\
@@ -218,27 +210,24 @@ definitions:
         x-modifiers: []
       parentId:
         type: "string"
-        format: "string"
         description: "Returns only jobs with the given parent ID. This parameter may\
           \ be unsupported for some API implementations or required for others depending\
           \ on whether there exists a logical noun above a job in the resource hierarchy\
           \ (for example, a cloud project). If the presence of this parameter is incompatible\
           \ with the server, it may return a 400 HTTP status.\n"
     description: "Job query parameters"
-  JobQueryResponse:
+  QueryJobsResponse:
     required:
     - "results"
     properties:
       results:
         type: "array"
         items:
-          $ref: "#/definitions/JobQueryResult"
+          $ref: "#/definitions/QueryJobsResult"
     description: "Response to a job query"
-  JobQueryResult:
+  QueryJobsResult:
     required:
     - "id"
-    - "name"
-    - "start"
     - "status"
     properties:
       id:
@@ -248,8 +237,7 @@ definitions:
         type: "string"
         description: "Job name"
       status:
-        type: "string"
-        description: "Job status"
+        $ref: "#/definitions/JobStatus"
       start:
         type: "string"
         format: "date-time"
@@ -263,3 +251,10 @@ definitions:
         description: "Custom job labels with string values"
         properties: {}
     description: "Result for an individual job returned by a job query"
+responses:
+  BadRequest:
+    description: "Bad request"
+  NotFound:
+    description: "Job not found"
+  ServerError:
+    description: "Internal server error"
